# ChangeLog for dev-ruby/mixlib-log
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mixlib-log/ChangeLog,v 1.3 2011/04/10 06:40:06 graaff Exp $

  10 Apr 2011; Hans de Graaff <graaff@gentoo.org> -mixlib-log-1.1.0.ebuild:
  Remove old version.

*mixlib-log-1.2.0 (24 Oct 2010)

  24 Oct 2010; Hans de Graaff <graaff@gentoo.org> +mixlib-log-1.2.0.ebuild:
  Version bump. Install documentation. Run specs and features. Add ree18.

*mixlib-log-1.1.0 (03 Jul 2010)

  03 Jul 2010; Benedikt Böhm <hollow@gentoo.org> +mixlib-log-1.1.0.ebuild,
  +metadata.xml:
  initial ebuild, thanks to Gábor Vészi
