@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/mixlib-log
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mixlib-log/ChangeLog,v 1.3 2011/04/10 06:40:06 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mixlib-log/ChangeLog,v 1.4 2011/07/18 14:55:19 graaff Exp $
+
+*mixlib-log-1.3.0 (18 Jul 2011)
+
+  18 Jul 2011; Hans de Graaff <graaff@gentoo.org> +mixlib-log-1.3.0.ebuild:
+  Version bump.
 
   10 Apr 2011; Hans de Graaff <graaff@gentoo.org> -mixlib-log-1.1.0.ebuild:
   Remove old version.
